# imlab-dremel

./: .gitignore  .gitlab-ci.yml  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile.build  Dockerfile.develop  FindTBB.cmake  README.md  docker-compose.yml
_presentation/: Dremel_Final_Presentation.odp  Final_Presentation.odp  Imlab Benchmarks.odp
bench/: dremel_benchmark.cc  local.cmake  plot-benchmarks.sh  tpcc_5w_mix_neworder_delivery.cc  tpcc_5w_neworder.cc
bench/plots/: generic_google_benchmark_plot.R
data/: .gitignore  new_order.sql  schema.proto  schema.sql
data/dremel/: README.md  generate_dremel_data.py
data/queries/: new_order.sql
data/tpcc_5w/: README.md
include/: database.h  local.cmake
include/imlab/: database.h  schema.h  schema_types.h
include/imlab/algebra/: inner_join.h  iu.h  operator.h  print.h  query.h  selection.h  table_scan.h
include/imlab/dremel/: assembling.h  field_reader.h  field_writer.h  record_fsm.h  schema_helper.h  shredding.h  storage.h
include/imlab/infra/: bits.h  data_loader.h  dremel.h  error.h  hash.h  hash_table.h  template.h  types.h
include/imlab/queryc/: query_compiler.h  query_parse_context.h
include/imlab/schemac/: default_schema.h  schema_compiler.h  schema_parse_context.h
include/imlab/test/: data.h
src/: database.cc  local.cmake
src/imlab/: schema.cc  schema_types.cc
src/imlab/algebra/: inner_join.cc  print.cc  selection.cc  table_scan.cc
src/imlab/dremel/: field_writer.cc  schema_helper.cc
src/imlab/infra/: dremel.cc  types.cc
src/infra/: types.cc
test/: algebra_test.cc  data.cc  database_loading_test.cc  database_query_test.cc  database_test.cc  dremel_test.cc  hash_table.cc  hash_table_test.cc  local.cmake  query_execution_test.cc  query_parser_test.cc  schema_parser_test.cc  tester.cc
tools/: imlabdb.cc  local.cmake
tools/protobuf/: compile-schema.sh  local.cmake  protoc-gen-schema.py
tools/queryc/: local.cmake  query_compiler.cc  query_parse_context.cc  query_parser.y  query_scanner.l  queryc.cc
tools/schemac/: local.cmake  schema_compiler.cc  schema_parse_context.cc  schema_parser.y  schema_scanner.l  schemac.cc  tester.cc
